# home-analytics-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260714_2230_add_lottery_sync_runs.py  20260716_2145_add_database_backup_runs.py  20260716_2210_add_database_restore_runs.py  20260718_1530_add_lottery_saved_combinations.py  20260719_1545_add_notification_delivery_runs.py  20260723_0900_add_lottery_replay_runs.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: plugins.py  router.py  system.py
backend/app/core/: middleware.py
backend/app/core/backup/: models.py  remote.py  repository.py  scheduler.py  schemas.py  service.py
backend/app/core/config/: settings.py
backend/app/core/database/: session.py
backend/app/core/logging/: __init__.py  setup.py
backend/app/core/notification/: __init__.py  models.py  schemas.py  service.py
backend/app/core/plugins/: __init__.py  contracts.py  registry.py
backend/app/plugins/: __init__.py
backend/app/plugins/lottery/: __init__.py  plugin.py
backend/app/shared/: __init__.py
backend/app/shared/exceptions/: __init__.py  base.py  codes.py  handlers.py
backend/app/shared/responses/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_api_contracts.py  test_backup_remote.py  test_lottery_replay.py  test_lottery_rule_seed.py  test_lottery_service.py  test_lottery_sync.py  test_plugin_registry.py
(+83 files in other folders)
