[project]
name = "home-analytics-platform-backend"
version = "0.1.0"
description = "Backend service for Home Analytics Platform."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "loguru>=0.7.2",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.5.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
